--- a/2D Poisson's Equation FEM.vcxproj
+++ b/2D Poisson's Equation FEM.vcxproj
@@ -132,6 +132,7 @@
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Mesh.cpp" />
     <ClCompile Include="ShapeFunctions.cpp" />
+    <ClCompile Include="Utils.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Element.h" />
