matrix inversion for solver

--- a/2D Poisson's Equation FEM.vcxproj
+++ b/2D Poisson's Equation FEM.vcxproj
@@ -137,6 +137,7 @@
   <ItemGroup>
     <ClInclude Include="Element.h" />
     <ClInclude Include="GaussPoint.h" />
+    <ClInclude Include="Matrix.h" />
     <ClInclude Include="Mesh.h" />
     <ClInclude Include="ShapeFunctions.h" />
     <ClInclude Include="Utils.h" />
